--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="c1 content">
-            <h2 class="c1p">c1p Info goes in this heading</h2>
+            <h2 class="c1p"><a href="https://www.google.com/" target="_blank"> c1p Info goes in this heading</a></h2>
             <p class="info">.Content P Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam corporis ex eligendi, placeat maxime amet. Nisi, excepturi odio voluptatum maxime adipisci corrupti dicta veniam unde quasi, iure voluptas dolorum quam!
             .Content P Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam corporis ex eligendi, placeat maxime amet. Nisi, excepturi odio voluptatum maxime adipisci corrupti dicta veniam unde quasi, iure voluptas dolorum quam!
             </p>
